test/loop/confidence/errors/module_errors_1.loop
# Errors in pattern matching functions

require a.







scan( =>
  []                    : [1: 2, 1: 3]
  [x]       | x < 10    : [x]
  [x:xs]                : scan(xs) + x

main ->
  scan([100, 1])
